Chapter 3 — Listing 3.5: WithdrawalPolicyWithDefault.java Demonstrates: combining functional interfaces using default methods